feat: verify JWT authentication
